--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             </div>
             <div class="col-lg-12 mb-4">
               <h5>Pemanfaatan Insentif</h5>
-              <div class="row gap-0 d-flex align-items-end">
+              <div class="row gap-0 d-flex align-items-end px-3 px-lg-0">
                 <div class="col-lg-3 m-0 p-0">
                   <div class="p-4 bg-b600 text-start">
                     <h5 class="h1 text-white pt-md-5">96%</h5>
@@ -408,7 +408,7 @@
       <div class="container py-3">
         <div class="d-lg-flex justify-content-between align-items-center text-center">
           <div class="social-media"><a href="https://www.youtube.com/channel/UCXU-nRpRs5Hk9bF3r28rSDA" target="_blank" aria-label="Prakerja Youtube"><i class="bi bi-youtube"></i></a><a href="https://www.instagram.com/prakerja.go.id/" target="_blank" aria-label="Prakerja Instagram"><i class="bi bi-instagram"></i></a><a href="https://www.facebook.com/prakerja.go.id/" target="_blank" aria-label="Prakerja Facebook"><i class="bi bi-facebook"></i></a><a href="https://www.linkedin.com/company/kartu-prakerja/" target="_blank" aria-label="Prakerja Linkedin"><i class="bi bi-linkedin"></i></a></div>
-          <div class="copyrights mt-3 mt-lg-0"><span>&copy; Kartu Prakerja 2024</span></div>
+          <div class="copyrights mt-3 mt-lg-0"><span>&copy; Prakerja 2024</span></div>
         </div>
       </div>
       <button class="scroll-top"><i class="bi bi-chevron-up"></i></button>
