--- a/tanyajawab/index.html
+++ b/tanyajawab/index.html
@@ -48,9 +48,7 @@
                 <div class="icon"></div>
               </div>
             </li>
-            <li class="nav-item md-hide"><a class="nav-link" href="../index.html">Beranda</a></li>
-            <li class="nav-item md-hide"><a class="nav-link nav-link-active" href="../tanyajawab/index.html">Tanya Jawab</a></li>
-            <li class="nav-item md-hide">
+            <li class="nav-item md-hide disable-hover">
               <div class="input-group custom-search-2 search-only">
                 <button class="btn btn-outline-light" id="button-addon1" type="button"><i class="bi bi-search"></i></button>
                 <input class="form-control" type="text" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Cari provinsi / kabupaten..."/>
