--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
                 <div class="icon"></div>
               </div>
             </li>
-            <li class="nav-item md-hide"><a class="nav-link nav-link-active" href="index.html">Beranda</a></li>
-            <li class="nav-item md-hide"><a class="nav-link" href="tanyajawab/index.html">Tanya Jawab</a></li>
-            <li class="nav-item md-hide">
+            <li class="nav-item md-hide disable-hover">
               <div class="input-group custom-search-2 search-only">
                 <button class="btn btn-outline-light" id="button-addon1" type="button"><i class="bi bi-search"></i></button>
                 <input class="form-control" type="text" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Cari provinsi / kabupaten...">
@@ -264,7 +262,7 @@
             </div>
             <div class="col-lg-12 mb-4">
               <h5>Pemanfaatan Insentif</h5>
-              <div class="row gap-0 d-flex align-items-end px-3 px-lg-0">
+              <div class="row gap-0 d-flex align-items-end px-3">
                 <div class="col-lg-3 m-0 p-0">
                   <div class="p-4 bg-b600 text-start">
                     <h5 class="h1 text-white pt-md-5">96%</h5>
