update home for chart

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="col-lg-6 d-flex flex-column">
               <div class="border p-4 d-flex rounded-3 gap-3 mb-4 h-100 align-items-center"><img src="img/img-people.svg" alt="">
                 <div class="text-start">
-                  <h6 class="h1 text-primary">18.887.737</h6>
+                  <h6 class="h1 text-primary" id="total-penerima">18.887.737</h6>
                   <p class="mb-0">Total Penerima Aktif Program</p>
                 </div>
               </div>
@@ -120,19 +120,19 @@
             <div class="col-lg-6 mb-4">
               <div class="border p-3 w-100 rounded">
                 <h5 class="mb-3">Jenis Kelamin</h5>
-                <div class="chart-adjust-inner-width" id="jenisKelamin" style="min-height:300px"></div>
+                <div id="gender" style="height:300px"></div>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="border p-3 w-100 rounded">
                 <h5 class="mb-3">Umur</h5>
-                <div id="umur"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+                <div id="age" style="height:300px"></div>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="border p-3 w-100 rounded">
                 <h5 class="mb-3">Pendidikan Terakhir</h5>
-                <div id="pendidikanTerakhir"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+                <div id="lastEdu" style="height:300px"></div>
               </div>
             </div>
           </div>
