--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -624,5 +624,5 @@
   <script src="https://cdn.datatables.net/2.1.4/js/dataTables.bootstrap5.js"></script>
   <script src="../js/lib/owl.carousel.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js" referrerpolicy="no-referrer"> </script>
-  <script src="../js/function.js"></script>
+  <script src="../js/function-min.js"></script>
 </html>
