--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
             </div>
             <div class="col-lg-6 mb-4">
               <div class="border rounded-3 p-3">
-                <h5 class="mb-4">Total Jumlah Pelatihan</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
+                <h5 class="mb-4">Total Jumlah Pelatihan</h5>
+                <div id="courses" style="height:300px"></div>
               </div>
             </div>
             <div class="col-lg-6 mb-4">
