update kategori pelatihan

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&amp;family=Poppins:wght@600;700;900&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/2.1.4/css/dataTables.bootstrap5.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -195,7 +195,7 @@
             </div>
             <div class="col-lg-6 mb-4">
               <div class="border rounded-3 p-3">
-                <h5 class="mb-4">Preferensi Moda Pelatihan</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
+                <h5 class="mb-4">Moda Pelatihan</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
               </div>
             </div>
             <div class="col-lg-12 mb-4">
@@ -204,122 +204,36 @@
             <div class="col-lg-12 mb-4">
               <h5 class="mb-4">Kategori Pelatihan Terfavorit</h5>
               <div class="row px-3">
-                <div class="col-6 col-lg-20 col-md-6 bg-b800 p-4 rounded-lg-start align-items-end p-3 text-start">
-                  <div></div><img class="mb-3" src="img/kat1-pelatihan.svg" alt="">
-                  <h5 class="text-white">Penjualan & Pemasaran</h5>
+                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-shop mb-3 fs-1 text-primary"></i>
+                  <h6>Penjualan & Pemasaran</h6>
                 </div>
-                <div class="col-6 col-lg-20 col-md-6 bg-t500 p-4 align-items-end p-3 text-start"><img class="mb-3" src="img/kat2-pelatihan.svg" alt="">
-                  <h5 class="text-white">Gaya Hidup</h5>
+                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-luggage mb-3 fs-1 text-primary"></i>
+                  <h6>Gaya Hidup</h6>
                 </div>
-                <div class="col-6 col-lg-20 col-md-6 bg-y500 p-4 align-items-end p-3 text-start"><img class="mb-3" src="img/kat3-pelatihan.svg" alt="">
-                  <h5 class="text-white">Makanan dan Minuman</h5>
+                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-cup-straw mb-3 fs-1 text-primary"></i>
+                  <h6>Makanan dan Minuman</h6>
                 </div>
-                <div class="col-6 col-lg-20 col-md-6 bg-o500 p-4 align-items-end p-3 text-start"><img class="mb-3" src="img/kat4-pelatihan.svg" alt="">
-                  <h5 class="text-white">Manajemen</h5>
+                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-diagram-2 mb-3 fs-1 text-primary"></i>
+                  <h6>Manajemen</h6>
                 </div>
-                <div class="col-12 col-lg-20 col-md-12 bg-b500 p-4 rounded-lg-end align-items-end p-3 text-start"><img class="mb-3" src="img/kat5-pelatihan.svg" alt="">
-                  <h5 class="text-white">Teknik</h5>
+                <div class="col-12 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-wrench-adjustable-circle mb-3 fs-1 text-primary"></i>
+                  <h6>Teknik</h6>
                 </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section-course py-3 py-lg-5">
-        <div class="container px-4 px-md-0">
-          <div class="row text-center">
-            <h4 class="mb-4">Insentif</h4>
-            <div class="col-lg-12 mb-4">
-              <h5>Rekening Penerimaan Insentif</h5>
-              <div id="rekeningPenerimaanInsentif"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
-            </div>
-            <div class="col-lg-12 mb-4">
-              <h5>Pemanfaatan Insentif</h5>
-              <div class="row px-3">
-                <div class="col-6 col-lg-20 col-md-6 bg-b800 p-4 rounded-lg-start text-start"><img class="mb-3" src="img/img-bowl-food.svg" alt="">
-                  <h5 class="text-white">88%</h5>
-                  <p class="text-white mb-0 fs-7">Kebutuhan Pokok</p>
+                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-layers mb-3 fs-1 text-primary"></i>
+                  <h6>Ritel/Perdagangan</h6>
                 </div>
-                <div class="col-6 col-lg-20 col-md-6 bg-t500 p-4 text-start"><img class="mb-3" src="img/img-money-hand.svg" alt="">
-                  <h5 class="text-white">67%</h5>
-                  <p class="text-white mb-0 fs-7">Sebagai Modal Usaha</p>
+                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-tools mb-3 fs-1 text-primary"></i>
+                  <h6>Pemeliharaan, Perbaikan, Servis</h6>
                 </div>
-                <div class="col-6 col-lg-20 col-md-6 bg-y500 p-4 text-start"><img class="mb-3" src="img/img-wifi.svg" alt="">
-                  <h5 class="text-white">57%</h5>
-                  <p class="text-white mb-0 fs-7">Membeli Paket Data / Internet</p>
+                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-car-front mb-3 fs-1 text-primary"></i>
+                  <h6>Otomotif</h6>
                 </div>
-                <div class="col-6 col-lg-20 col-md-6 bg-o500 p-4 text-start"><img class="mb-3" src="img/img-online-learning.svg" alt="">
-                  <h5 class="text-white">48%</h5>
-                  <p class="text-white mb-0 fs-7">Kegiatan Penunjang Belajar Lain</p>
+                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-water mb-3 fs-1 text-primary"></i>
+                  <h6>Perikanan</h6>
                 </div>
-                <div class="col-12 col-lg-20 col-md-12 bg-b500 p-4 rounded-lg-end text-start"><img class="mb-3" src="img/img-external-learning.svg" alt="">
-                  <h5 class="text-white">31%</h5>
-                  <p class="text-white mb-0 fs-7">Pembelian Pelatihan di Luar Prakerja</p>
+                <div class="col-12 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-boxes mb-3 fs-1 text-primary"></i>
+                  <h6>Operasi, Gudang</h6>
                 </div>
-              </div>
-            </div>
-            <div class="col-lg-12 mb-4">
-              <h5>Manfaat yang dirasakan setelah mengikuti Program Prakerja</h5>
-              <div id="rekeningPenerimaanInsentif"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
-            </div>
-            <div class="col-lg-12 mb-4">
-              <h5>Pemanfaatan Insentif</h5>
-              <div class="row gap-0 d-flex align-items-end px-3">
-                <div class="col-lg-3 m-0 p-0">
-                  <div class="p-4 bg-b600 text-start">
-                    <h5 class="h1 text-white pt-md-5">96%</h5>
-                    <p class="m-0 text-white">Meningkatkan kompetensi</p>
-                  </div>
-                </div>
-                <div class="col-lg-3 m-0 p-0">
-                  <div class="p-4 bg-b500 text-start">
-                    <h5 class="h1 text-white pt-md-4">95%</h5>
-                    <p class="m-0 text-white">Meningkatkan produktivitas kerja</p>
-                  </div>
-                </div>
-                <div class="col-lg-3 m-0 p-0">
-                  <div class="p-4 bg-b400 text-start">
-                    <h5 class="h1 text-white pt-md-3">94%</h5>
-                    <p class="m-0 text-white">Meningkatkan daya saing kerja</p>
-                  </div>
-                </div>
-                <div class="col-lg-3 m-0 p-0">
-                  <div class="p-4 bg-b300 text-start">
-                    <h5 class="h1 text-white pt-md-2">92%</h5>
-                    <p class="m-0 text-white">Mendorong kewirausahaan</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section-testimony">
-        <div class="container py-3 py-lg-5 px-4 px-md-0">
-          <h4 class="custom-rfs-h4 text-center mb-3">Apa Kata Mereka?</h4>
-          <div class="owl-carousel testimony-carousel carousel-auto-height">
-            <div class="testimony-card p-3 d-flex align-items-start">
-              <div class="testimony-header d-flex justify-content-between align-items-center pe-3"><span class="fs-1"><i class="bi bi-quote"></i></span></div>
-              <div class="testimony-body"> 
-                <p class="m-0 pt-3"><i>Prakerja mendorong peningkatan inklusi keuangan, terutama bagi penerima Prakerja dengan pendidikan SMA ke bawah, penerima yang tinggal di luar Pulau Jawa, atau penerima dengan omzet usaha dan gaji kategori rendah.</i><br><i>Hasil studi ini menunjukkan bahwa 43,8% responden membuka akun e-wallet dan 9,5% responden membuka rekening bank pertama kali karena menjadi penerima Prakerja.”</i></p><span class="testimony-divider"></span>
-                <p> <b>DEFINIT-ADB, 2023</b></p>
-              </div>
-            </div>
-            <div class="testimony-card p-3 d-flex align-items-start">
-              <div class="testimony-header d-flex justify-content-between align-items-center pe-3"><span class="fs-1"><i class="bi bi-quote"></i></span></div>
-              <div class="testimony-body"> 
-                <p class="m-0 pt-3"><i>
-                    Berdasarkan studi DEFINIT, program Prakerja meningkatkan daya saing penerima dalam meningkatkan peluang mendapatkan pekerjaan (94,7%), meningkatkan keterampilan, kompetensi, dan produktivitas (82,8%), dan meningkatkan motivasi belajar teknologi digital (99,0%). 
-                    Sebanyak 85,9% responden berencana menggunakan sertifikat Prakerja apabila akan melamar pekerjaan di masa depan.”</i></p><span class="testimony-divider"></span>
-                <p> <b>DEFINIT-ADB, 2023</b></p>
-              </div>
-            </div>
-            <div class="testimony-card p-3 d-flex align-items-start">
-              <div class="testimony-header d-flex justify-content-between align-items-center pe-3"><span class="fs-1"><i class="bi bi-quote"></i></span></div>
-              <div class="testimony-body"> 
-                <p class="m-0 pt-3"><i>
-                    “Prakerja adalah program kerja pemerintah yang ke-4 paling dirasakan manfaatnya, setelah Bantuan Langsung Tunai, Kartu Indonesia Sehat, dan Kartu Indonesia Pintar.”</i></p><span class="testimony-divider"></span>
-                <p> <b>Poltracking Indonesia 2023</b></p>
               </div>
             </div>
           </div>
