--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <h5 class="my-4">Kategori Pelatihan Terbanyak</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
             </div>
             <div class="col-lg-12 mb-4">
-              <h5 class="mb-4">Kategori Pelatihan Terfavorit</h5>
+              <h5 class="mb-4">Kategori Pilihan Paling Diminati</h5>
               <div class="row px-3">
                 <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-shop mb-3 fs-1 text-primary"></i>
                   <h6>Penjualan & Pemasaran</h6>
