--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
             </div>
             <div class="col-lg-6 mb-4">
               <div class="border rounded-3 p-3">
-                <h5 class="mb-4">Moda Pelatihan</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
+                <h5 class="mb-4">Preferensi Moda Pelatihan</h5>
+                <div id="course-preference" style="height:400px"></div>
               </div>
             </div>
             <div class="col-lg-12 mb-4">
